--- a/static/main.css
+++ b/static/main.css
@@ -1,20 +1,18 @@
-
 body {
     text-align: center;
-    font-family: Verdana,sans-serif;
     font-size: 0.9em;
 }
 
 header {
     padding: 10px;
     color: white;
-    background-color: black;
 }
 
 section {
+    font-family: 'Bellefair', serif;
     margin: 5px;
     padding: 10px;
-    background-color: lightgrey;
+
 }
 
 img {
@@ -24,6 +22,15 @@ img {
     margin: 10px;
 }
 
-button {
-    font-size: 20px;
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
