--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,9 @@
 body {
     text-align: center;
     font-size: 0.9em;
+    margin-left: 30px;
+    margin-right: 30px;
+    border: 3px solid green;
 }
 
 header {
