--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Github Followers Finder">
   <meta charset="utf-8">
   <!-- Google Fonts and Boostrap -->
   <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
